# hcs

./: Cargo.toml  README.md  default.nix  shell.nix
gql/: events_insert.graphql  events_next.graphql  events_today.graphql  schema.graphql
nix/: package.nix  sources.json
src/: args.rs  cal.rs  common.rs  day.rs  insert.rs  main.rs  next.rs  today.rs
